# aurora-dual-rate-vla

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: repository-metadata.yml
.github/workflows/: ci.yml
configs/: aurora_edge_orin.yaml  domain_randomization.yaml
docs/sim_runs/: README.md
docs/sim_runs/sim-clutter-tool-demo/: gallery.md  manifest.json
docs/sim_runs/sim-drawer-tool-demo/: gallery.md  manifest.json
docs/sim_runs/sim-handoff-demo/: gallery.md  manifest.json
docs/sim_runs/sim-language-demo/: gallery.md  manifest.json
paper/: aurora_paper.tex  references.bib
scripts/: extract_real_images.py  generate_figures.py  simulate_aurora_runs.py
src/aurora/: __init__.py  __main__.py  benchmarks.py  cli.py  clock_sync.py  intent_ring.py  pipeline.py  reactive_controller.py  real_images.py  safety_critic.py  semantic_planner.py  simulated_runs.py  types.py
tests/: test_intent_ring.py  test_pipeline.py  test_real_images.py  test_safety_critic.py  test_simulated_runs.py
